Fixed layout issues, updated the index page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -274,7 +274,12 @@ color: black;
 /******************INDEX/HOME PAGE*******************/
 /****************************************************/
 
-
+.indexContainer {
+	width: 100%;
+	display: flex;
+	flex-flow: row;
+	background: linear-gradient(#6699ff, #3333ff);
+}
 
 .button {
 	width: 50%;
@@ -288,9 +293,6 @@ color: black;
 #leftButton, #rightButton {
 	background: linear-gradient(#6699ff, #3333ff);
 	vertical-align: middle;
-	-webkit-box-shadow:inset 0px 0px 10px 10px white;
-  -moz-box-shadow:inset 0px 0px 10px 10px white;
-  box-shadow:inset 0px 0px 10px 10px white;
 }
 
 #leftButton p, #rightButton p {
@@ -341,11 +343,29 @@ color: black;
 	display: flex;
 }
 
-
+.separator {
+	height: 100%;
+	width: 0.4%;
+	border-radius: 100%/400px;
+	background-color: white;
+}
 
 /***********************************************/
 /******************LOGIN PAGE*******************/
 /***********************************************/
+
+#loginContainer {
+	width: 900px;
+	margin: 0 auto;
+	display: flex;
+	flex-flow: column;
+}
+
+.checkbox {
+	width: 200px;
+	margin: 0 auto;
+	margin-top: 10px;
+}
 
 .loginS {
 margin: 20px auto;
@@ -419,12 +439,11 @@ box-shadow: none;
 }
 
 .btn {
-	margin: 0px 20px !important;
+	/* margin: 0px 20px !important; */
 }
 
 #submit {
-	margin: 0 !important;
-	margin-top: 20px !important;
+	margin-top: 20px !important; */
 }
 
 #remember_me {
@@ -462,7 +481,7 @@ box-shadow: none;
 }
 
 .midContainer {
-	width: 900px;
+	width: 1000px;
 	margin: 0 auto;
 	background-color: white;
 	text-align: center;
@@ -484,6 +503,13 @@ box-shadow: none;
 /****************************************************/
 /******************ALGORITHMS PAGES******************/
 /****************************************************/
+
+.algoContainer {
+	margin: 0 auto;
+	text-align: center;
+	height: inherit;
+	flex-flow: column;
+}
 
 #algoTitle {
 	font-size: 30px;
@@ -688,7 +714,7 @@ box-shadow: none;
 /****************************************************/
 
 .topAccInfo {
-		width: 900px;
+		width: 1000px;
 		text-align: center;
 }
 
@@ -763,7 +789,7 @@ box-shadow: none;
   font-size: 28px;
   font-weight: bold;
 	margin-right: 10px;
-	margin-top: 5px;
+	margin-top: 10px;
 }
 
 .closePassPopup:hover, .closeAvatarPopup:hover {
@@ -772,22 +798,26 @@ box-shadow: none;
 }
 
 .passPopup {
-	display: none;
+	 display: none;
 	 position: fixed;
 	 z-index: 1;
-	 padding-top: 100px;
+	 /* padding-top: 100px; */
 	 left: 0;
 	 top: 0;
 	 width: 100%;
 	 height: 100%;
-	 overflow: auto;
+	 /* overflow: auto; */
 	 background-color: rgb(0,0,0);
 	 background-color: rgba(0,0,0,0.4);
+	 line-height: 100%;
+	 /* display: flex; */
+
 }
 
 .passPopup-content {
 	background-color: #fefefe;
-    margin: 15% auto;
-    padding: 2px;
-    width: 400px;
+  margin: 15% auto;
+  padding: 2px;
+  width: 400px;
+	border-radius: 5px;
 }
